syntax = "proto3";

package com.softwaremill.academy.trading.hello;

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
